# todo-app

./: .gitignore
backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 66fee5c8e034_create_users_and_todos.py
backend/app/: main.py
backend/app/core/: security.py
backend/app/db/: init.py  session.py
backend/app/models/: todo.py  user.py
backend/app/routes/: auth.py
